generics/static/css/regdid-pdf.css
/* xhtml2pdf */

/* first page */
@page {
    @frame header_frame {
        -pdf-frame-content: header_content;
        top: 1.6cm;
        left: 1.9cm;
        right: 1.9cm;
        height: 2cm;
    }
    @frame content_frame {
        top: 3.8cm;
        left: 1.9cm;
        right: 1.9cm;
        height: 23.2cm;
    }
    @frame footer_frame {
        -pdf-frame-content: footer_content;
        top: 28cm;
        left: 1.9cm;
        right: 1.9cm;
        height: 1.1cm;
    }
}

/* toc page */
@page toc_page {
    @frame header_frame {
        -pdf-frame-content: header_content;
        top: 1.6cm;
        left: 1.9cm;
        right: 1.9cm;
        height: 2cm;
    }
    @frame content_frame {
        top: 3.8cm;
        left: 1.9cm;
        height: 23.2cm;
    }
    @frame footer_frame {
        -pdf-frame-content: footer_content;
        top: 28cm;
        left: 1.9cm;
        right: 1.9cm;
        height: 1.1cm;
    }
}

/* regular page */
@page regular_page {
    @frame header_frame {
        -pdf-frame-content: header_content;
        top: 1.6cm;
        left: 1.9cm;
        right: 1.9cm;
        height: 2cm;
    }
    @frame content_frame {
        top: 3.8cm;
        left: 1.9cm;
        right: 1.9cm;
        height: 23.2cm;
    }
    @frame footer_frame {
        -pdf-frame-content: footer_content;
        top: 28cm;
        left: 1.9cm;
        right: 1.9cm;
        height: 1.1cm;
    }
}

/* toc */
.toc-title {
    -pdf-outline: true;
    -pdf-level: 1;
    -pdf-outline-level: 0;
}
.toc-article {
    -pdf-outline: true;
    -pdf-level: 1;
    -pdf-outline-level: 1;
}
.toc_text {
    font-family: "Titillium Web Normal";
    padding: 0;
    margin: 0;
    line-height: 6mm;
}
.index {
    font-weight: bold;
    padding-bottom: 0.2cm;
}
h1, h2, h3, h4, h5, h6 {
    -pdf-outline: false;
}

/* general */
html {
    font-size: 10pt;
    line-height: 2mm;
    display: block;
}
table {
    -pdf-keep-with-next: true;
    border: solid 0.1mm #000000;
    overflow-wrap: break-word;
    table-layout: fixed;
}
td, th {
    border: solid 0.1mm #000000;
    text-align: left;
    padding: 1mm;
    vertical-align: middle;
    -pdf-word-wrap: CJK;
}
p, li {
    margin-top: 0;
    padding-top: 0;
}
ol {
    list-style-type: decimal;
    margin-bottom: 2mm;
}
ul {
    margin-bottom: 2mm;
}
/* ol styling */
ol li ol {
    list-style-type: lower-alpha;
}
ol li ol li ol {
    list-style-type: lower-roman;
}
ol li ol li ol li ol {
    list-style-type: upper-alpha;
}

/*articles*/
.content {
    font-family: "Titillium Web";
}
.art-separator {
    margin: 2mm;
    padding: 0;
}
.art {
    margin: 0;
    padding: 0;
    font-weight: bold;
}
.text {
    font-size: 10pt;
    /*text-align: justify;*/
}
.section-title {
    font-weight: bold;
}
.reg-title {
    padding-top: 8cm;
    font-size: 11pt;
    font-weight: bold;
    text-align: center;
}
.title {
    -pdf-keep-with-next: true;
}
li p > * {
    display: inline; /* Gestisce anche eventuali tag nidificati */
}

